larger font, and half-fixed wrapping issue

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
 	/* white-space: normal; */
 	white-space: nowrap;
 	font-family: Monospace;
-	font-size: 18px;
+	font-size: 28px;
 	line-height: 1;
 	text-align: center;
 	padding: 0px;
